[workspace.package]
name = "seed-rs"
version = "0.1.0"
edition = "2021"
description = "Seed-RS"
authors = [
    "DooMWhite <doomwhitex@gmail.com>",
    "Ramon Bernardo <ramonbernado.contato@gmail.com>",
]
license = "MIT OR Apache-2.0"

[workspace]
resolver = "2"
members = [
    "seed",
    "seed-common",
    "seed-database-common",
    "seed-database-server",
    "seed-game-common",
    "seed-game-world",
    "seed-network-common",
    "seed-network-server",
]

[workspace.dependencies]
anyhow = "1.0.71"
bevy = "0.10.1"
bevy_tokio_runtime = { git = "https://github.com/ms-rusty/bevy_tokio_runtime" }
bytes = "1.4.0"
crossbeam-channel = "0.5.8"
serde = "1.0.162"
tokio = { version = "1.28.0", features = ["full"] }
toml = "0.7.3"

# Enable a small amount of optimization in debug mode.
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
