[workspace.package]
name = "seed-rs"
version = "0.1.0"
edition = "2021"
description = "Seed-RS"
authors = [
    "DooMWhite <doomwhitex@gmail.com>",
    "Ramon Bernardo <ramonbernado.contato@gmail.com>",
]
license = "MIT OR Apache-2.0"

[workspace]
resolver = "2"
members = [
    "seed",
    "seed-common",
    "seed-database-server",
    "seed-database-server-common",
    "seed-game-world",
    "seed-game-world-common",
    "seed-network-server",
    "seed-network-server-common",
]

[workspace.dependencies]
anyhow = "1.0.71"
bevy = { git = "https://github.com/bevyengine/bevy", commit = "636f711d26b79cab068e029c4c058d45fca84970" }
bevy_tokio_runtime = { git = "https://github.com/ms-rusty/bevy_tokio_runtime" }
bytes = "1.4.0"
crossbeam-channel = "0.5.8"
num-derive = "0.3.3"
num-traits = "0.2.15"
serde = "1.0.163"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"] }
toml = "0.7.3"
uuid = "1.3.3"

# Enable a small amount of optimization in debug mode.
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
