[workspace.package]
name = "seed-rs"
version = "0.1.0"
edition = "2021"
description = "Seed-RS"
authors = [
    "DooMWhite <doomwhitex@gmail.com>",
    "Ramon Bernardo <ramonbernado.contato@gmail.com>",
]
license = "MIT OR Apache-2.0"

[workspace]
resolver = "2"
members = [
    "seed",
    "seed-common",
    "seed-database-server",
    "seed-database-server-common",
    "seed-game-world",
    "seed-game-world-common",
    "seed-network-server",
    "seed-network-server-common",
]

[workspace.dependencies]
anyhow = { version = "1.0.71", default-features = false, features = ["std"] }
bevy = { git = "https://github.com/bevyengine/bevy", commit = "4ce37395da029eb8b58c78c32812fe8329a3a1a4", default-features = false }
bevy_tokio_runtime = { git = "https://github.com/ms-rusty/bevy_tokio_runtime" }
bytes = { version = "1.4.0", default-features = false }
crossbeam-channel = { version = "0.5.8", default-features = false }
num-derive = "0.3.3"
num-traits = "0.2.15"
serde = { version = "1.0.163", default-features = false }
thiserror = "1.0.40"
tokio = { version = "1.28.2", default-features = false, features = [
    "rt-multi-thread",
    "net",
    "io-util",
    "io-std",
    "time",
] }
toml = { version = "0.7.4", default-features = false, features = [
    "parse",
    "display",
] }
uuid = { version = "1.3.3", default-features = false }
serial_test = "2.0.0"

# Enable a small amount of optimization in debug mode.
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
