[package]
name = "seed-network-server-common"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
arrayvec = { workspace = true }
bevy = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
