[package]
name = "seed-network-server"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
seed-common = { path = "../seed-common" }
seed-network-common = { path = "../seed-network-common" }

anyhow = { workspace = true }
bevy = { workspace = true }
bevy_tokio_runtime = { workspace = true }
crossbeam-channel = { workspace = true }
tokio = { workspace = true }
