[package]
name = "seed-network-server"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
seed-common = { path = "../seed-common" }
seed-network-common = { path = "../seed-network-common" }

anyhow = { workspace = true }
bevy = { workspace = true }
bevy_tokio_runtime = { workspace = true }
bytes = { workspace = true }
crossbeam-channel = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
