[package]
name = "seed-network-server"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
seed-common = { path = "../seed-common" }
seed-network-server-common = { path = "../seed-network-server-common" }

anyhow = { workspace = true }
bevy = { workspace = true }
bevy_tokio_runtime = { workspace = true }
bytes = { workspace = true }
crossbeam-channel = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
