[package]
name = "seed"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
seed-database-server = { path = "../seed-database-server" }
seed-game-world = { path = "../seed-game-world" }
seed-network-server = { path = "../seed-network-server" }

bevy = { workspace = true }
bevy-tokio-tasks = { workspace = true }
tokio = { workspace = true }
