[package]
name = "seed"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
seed-common = { path = "../seed-common" }
seed-database-server = { path = "../seed-database-server" }
seed-game-world = { path = "../seed-game-world" }
seed-network-server = { path = "../seed-network-server" }

bevy = { workspace = true }
bevy_tokio_runtime = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
